# sage

./: Cargo.toml  README.md  install.sh
src/: cli.rs  config.rs  error.rs  git.rs  main.rs  prompts.rs
src/ai/: claude.rs  mod.rs  openai.rs
