[package]
name = "sage"
version = "0.1.0"
edition = "2021"
authors = ["Thanipro <me@thani.pro>"]
description = "AI-powered Git Commit Message generator"
readme = "README.md"
license = "MIT"
repository = "https://github.com/thanipro/sage"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0.0"
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true